--- a/index.html
+++ b/index.html
@@ -1,115 +1,111 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A layout example that shows off a responsive email layout.">
-    <title>Email &ndash; Layout Examples &ndash; Pure</title>
-    <link rel="stylesheet" href="https://purecss.io/css/pure/pure-min.css">
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <title>My Page</title>
+  
+  <!-- Essential meta tags -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Welcome to our website! We offer a wide range of products and services to meet your needs. Our team of experts is dedicated to providing you with high-quality solutions that are tailored to your specific requirements. Contact us today to learn more about how we can help you achieve your goals.">
+  
+  <!-- Open Graph / Facebook meta tags -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.example.com/">
+  <meta property="og:title" content="My Page">
+  <meta property="og:description" content="Welcome to our website! We offer a wide range of products and services to meet your needs. Our team of experts is dedicated to providing you with high-quality solutions that are tailored to your specific requirements. Contact us today to learn more about how we can help you achieve your goals.">
+  <meta property="og:image" content="https://www.example.com/images/og-image.jpg">
+  
+  <!-- Twitter meta tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://www.example.com/">
+  <meta name="twitter:title" content="My Page">
+  <meta name="twitter:description" content="Welcome to our website! We offer a wide range of products and services to meet your needs. Our team of experts is dedicated to providing you with high-quality solutions that are tailored to your specific requirements. Contact us today to learn more about how we can help you achieve your goals.">
+  <meta name="twitter:image" content="https://www.example.com/images/twitter-image.jpg">
+  
+  <!-- Other meta tags -->
+  <link rel="canonical" href="https://www.example.com/">
+  <meta name="robots" content="index, follow">
+  
+  <style>
+    /* Essential CSS for above-the-fold content */
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: Arial, sans-serif;
+      font-size: 16px;
+      line-height: 1.5;
+    }
+
+    header {
+      background-color: #333;
+      color: #fff;
+      padding: 1rem;
+    }
+
+    nav {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    nav ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      display: flex;
+    }
+
+    nav li {
+      margin-right: 1rem;
+    }
+
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    main {
+      padding: 1rem;
+    }
+
+    /* Optional CSS for below-the-fold content */
+    img {
+      max-width: 100%;
+      height: auto !important;
+    }
+
+    footer {
+      background-color: #333;
+      color: #fff;
+      padding: 1rem;
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
 
-<div id="layout" class="content pure-g">
-    <div id="nav" class="pure-u">
-        <a href="#" id="menuLink" class="nav-menu-button">Menu</a>
+  <header>
+    <nav>
+      <h1>My Page</h1>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-        <div class="nav-inner">
-            <h1>Logo</h1>
+  <main>
+    <h2>Welcome to My Page</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel turpis vel mi convallis bibendum eget in mi. Sed at justo et risus lobortis tristique. Sed euismod, urna vel vestibulum bibendum, urna sapien finibus nibh, vitae blandit sapien magna id sem. Praesent mauris nunc, venenatis vel metus ac, ultrices bibendum eros. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Sed sed ligula a lorem interdum commodo. Vivamus rutrum nibh id ipsum malesuada, ut tincidunt metus rhoncus. Sed porttitor euismod eros, vel maximus justo iaculis a.</p>
+    <img src="https://picsum.photos/800/400" width="800" height="400" alt="Example image">
+    <p>Nulla non nulla non justo facilisis mollis.Sed euismod urna quis nunc feugiat, sit amet suscipit nunc suscipit. Phasellus faucibus, ante eu mattis accumsan, nunc nulla lobortis neque, a luctus massa purus in dolor. Phasellus euismod turpis id quam fermentum, id aliquet sem placerat. Sed congue mauris id tellus euismod, ut imperdiet nulla fringilla. Sed euismod sapien vel metus posuere, eu blandit velit rutrum. Nam volutpat elit vel semper tristique. Sed mollis orci quis purus bibendum, a efficitur nulla sodales. Pellentesque id enim eros. Fusce euismod, turpis eget semper vehicula, velit dolor commodo nisi, sit amet consectetur nunc arcu ut dui.</p>
+  </main>
 
-            <div class="pure-menu">
-                <ul class="pure-menu-list">
-                    <li class="pure-menu-item"><a href="#" class="pure-menu-link">About <span class="email-count">(2)</span></a></li>
-                    <li class="pure-menu-item"><a href="#" class="pure-menu-link">Contact</a></li>
-					
-                    <li class="pure-menu-heading">Tags</li>
-                    <li class="pure-menu-item"><a href="#" class="pure-menu-link"><span class="email-label-personal"></span>Psychology</a></li>
-                    <li class="pure-menu-item"><a href="#" class="pure-menu-link"><span class="email-label-work"></span>Life</a></li>
-                    <li class="pure-menu-item"><a href="#" class="pure-menu-link"><span class="email-label-travel"></span>Travel</a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
+  <footer>
+    <p>&copy; 2021 My Page. All rights reserved.</p>
+  </footer>
 
-    <div id="list" class="pure-u-1">
-
-
-
-    </div>
-
-    <div id="main" class="pure-u-1">
-        <div class="email-content">
-            <div class="email-content-header pure-g">
-                <div class="pure-u-1-2">
-                    <h1 class="email-content-title">Hello from Toronto</h1>
-                    <p class="email-content-subtitle">
-                        From <a>Tilo Mitra</a> at <span>3:56pm, April 3, 2021</span>
-                    </p>
-                </div>
-
-                <div class="email-content-controls pure-u-1-2">
-                    <button class="secondary-button pure-button">Share to Facebook</button>
-                    <button class="secondary-button pure-button">Share to Twitter</button>
-                    <button class="secondary-button pure-button">Share to LinkedIn</button>
-                </div>
-            </div>
-
-            <div class="email-content-body">
-                content
-            </div>
-        </div>
-    </div>
-</div>
-<!-- Script to make the Menu link work -->
-<!-- Just stripped down version of the js/ui.js script for the side-menu layout -->
-<script>
-    function getElements() {
-        return {
-            menu: document.getElementById('nav'),
-            menuLink: document.getElementById('menuLink')
-        };
-    }
-
-    function toggleClass(element, className) {
-        var classes = element.className.split(/\s+/);
-        var length = classes.length;
-        var i = 0;
-
-        for (; i < length; i++) {
-            if (classes[i] === className) {
-                classes.splice(i, 1);
-                break;
-            }
-        }
-        // The className is not found
-        if (length === classes.length) {
-            classes.push(className);
-        }
-
-        element.className = classes.join(' ');
-    }
-
-    function toggleMenu() {
-        var active = 'active';
-        var elements = getElements();
-
-        toggleClass(elements.menu, active);
-    }
-
-    function handleEvent(e) {
-        var elements = getElements();
-
-        if (e.target.id === elements.menuLink.id) {
-            toggleMenu();
-            e.preventDefault();
-        } else if (elements.menu.className.indexOf('active') !== -1) {
-            toggleMenu();
-        }
-    }
-
-    document.addEventListener('DOMContentLoaded', function () {
-        document.addEventListener('click', handleEvent);
-    });
-</script>
 </body>
 </html>
