--- a/blogfromfeed.html
+++ b/blogfromfeed.html
@@ -5,44 +5,39 @@
   <title>My Blog</title>
 </head>
 <body>
-  <h1>My Bloggg</h1>
+  <h1>My Blog</h1>
   <div id="posts"></div>
 
   <script>
-    google.load('feeds', '1', { 'callback': onFeedLoad });
+    const blogId = '7985068672675675135'; // replace with your Blogger blog's ID
+    const apiKey = 'AIzaSyCFJ1eeeQoTMNOjiGHUqijar8LVvjL-_0E'; // replace with your Blogger API key
+    const maxPosts = 10; // maximum number of posts to display
 
-    function onFeedLoad() {
-      const feedUrl = 'https://myblog.blogspot.com/feeds/posts/default'; // replace with your Blogger blog's RSS feed URL
-      const maxPosts = 10; // maximum number of posts to display
+    const url = `https://www.googleapis.com/blogger/v3/blogs/${blogId}/posts?key=${apiKey}&maxResults=${maxPosts}`;
 
-      const feed = new google.feeds.Feed(feedUrl);
-      feed.setNumEntries(maxPosts);
-      feed.load((result) => {
-        if (!result.error) {
-          let postHtml = '';
+    fetch(url)
+      .then((response) => response.json())
+      .then((data) => {
+        let postHtml = '';
 
-          for (let i = 0; i < result.feed.entries.length; i++) {
-            const entry = result.feed.entries[i];
-            const title = entry.title;
-            const link = entry.link;
-            const pubDate = new Date(entry.publishedDate).toLocaleDateString();
-            const content = entry.content.replace(/<(?:.|\n)*?>/gm, ''); // remove HTML tags
+        data.items.forEach((item) => {
+          const title = item.title;
+          const link = item.url;
+          const pubDate = new Date(item.published).toLocaleDateString();
+          const content = item.content.replace(/<(?:.|\n)*?>/gm, ''); // remove HTML tags
 
-            postHtml += `<article>
-                            <h2><a href="${link}">${title}</a></h2>
-                            <p><time>${pubDate}</time></p>
-                            <div>${content}</div>
-                          </article>`;
-          }
+          postHtml += `<article>
+                          <h2><a href="${link}">${title}</a></h2>
+                          <p><time>${pubDate}</time></p>
+                          <div>${content}</div>
+                        </article>`;
+        });
 
-          document.getElementById('posts').innerHTML = postHtml;
-        } else {
-          console.error('Error fetching RSS feed:', result.error);
-        }
+        document.getElementById('posts').innerHTML = postHtml;
+      })
+      .catch((error) => {
+        console.error('Error fetching blog posts:', error);
       });
-    }
   </script>
-
-  <script src="https://www.google.com/jsapi"></script>
 </body>
 </html>
