--- a/index.html
+++ b/index.html
@@ -25,34 +25,7 @@
 
     <div id="output"></div>
 
-    <script>
-        function breakText() {
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Text Breaker</title>
-    <style>
-        textarea {
-            width: 100%;
-            height: 150px;
-        }
-
-        #output {
-            margin-top: 10px;
-        }
-    </style>
-</head>
-<body>
-
-    <h2>Text Breaker</h2>
-    <label for="inputText">Enter your long text:</label>
-    <textarea id="inputText"></textarea>
-
-    <button onclick="breakText()">Break Text</button>
-
-    <div id="output"></div>
+    <button onclick="downloadHTML()">Download HTML</button>
 
     <script>
         function breakText() {
@@ -105,6 +78,276 @@
                 partDiv.textContent = `Part ${index + 1}: ${part}`;
                 outputDiv.appendChild(partDiv);
             });
+        }
+
+        function downloadHTML() {
+            const htmlContent = `<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Text Breaker</title>
+    <style>
+        textarea {
+            width: 100%;
+            height: 150px;
+        }
+
+        #output {
+            margin-top: 10px;
+        }
+    </style>
+</head>
+<body>
+
+    <h2>Text Breaker</h2>
+    <label for="inputText">Enter your long text:</label>
+    <textarea id="inputText"></textarea>
+
+    <button onclick="breakText()">Break Text</button>
+
+    <div id="output"></div>
+
+    <button onclick="downloadHTML()">Download HTML</button>
+
+    <script>
+        ${breakText}
+        ${displayOutput}
+        ${downloadHTML}
+    </script>
+
+</body>
+</html>`;
+
+            const blob = new Blob([htmlContent], { type: 'text/html' });
+            const link = document.createElement('a');
+            link.href = URL.createObjectURL(blob);
+            link.download = 'text_breaker.html';
+            link.click();
+        }
+    </script>
+
+</body>
+</html>`;
+            const blob = new Blob([htmlContent], { type: 'text/html' });
+            const link = document.createElement('a');
+            link.href = URL.createObjectURL(blob);
+            link.download = 'text_breaker.html';
+            link.click();
+        }
+    </script>
+
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Text Breaker</title>
+    <style>
+        textarea {
+            width: 100%;
+            height: 150px;
+        }
+
+        #output {
+            margin-top: 10px;
+        }
+    </style>
+</head>
+<body>
+
+    <h2>Text Breaker</h2>
+    <label for="inputText">Enter your long text:</label>
+    <textarea id="inputText"></textarea>
+
+    <button onclick="breakText()">Break Text</button>
+
+    <div id="output"></div>
+
+    <script>
+        function breakText() {
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Text Breaker</title>
+    <style>
+        textarea {
+            width: 100%;
+            height: 150px;
+        }
+
+        #output {
+            margin-top: 10px;
+        }
+    </style>
+</head>
+<body>
+
+    <h2>Text Breaker</h2>
+    <label for="inputText">Enter your long text:</label>
+    <textarea id="inputText"></textarea>
+
+    <button onclick="breakText()">Break Text</button>
+
+    <div id="output"></div>
+
+    <script>
+        function breakText() {
+            const inputText = document.getElementById('inputText').value;
+            const maxPartLength = 500;
+            const firstPartLength = 480;
+
+            let parts = [];
+            let remainingText = inputText;
+
+            // Extract the first part
+            const firstPart = remainingText.slice(0, firstPartLength);
+            parts.push(firstPart);
+            remainingText = remainingText.slice(firstPartLength);
+
+            // Break the remaining text into parts of 500 characters
+            while (remainingText.length > 0) {
+                // Find the next sentence
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Text Breaker</title>
+    <style>
+        textarea {
+            width: 100%;
+            height: 150px;
+        }
+
+        #output {
+            margin-top: 10px;
+        }
+    </style>
+</head>
+<body>
+
+    <h2>Text Breaker</h2>
+    <label for="inputText">Enter your long text:</label>
+    <textarea id="inputText"></textarea>
+
+    <button onclick="breakText()">Break Text</button>
+
+    <div id="output"></div>
+
+    <button onclick="downloadHTML()">Download HTML</button>
+
+    <script>
+        function breakText() {
+            const inputText = document.getElementById('inputText').value;
+            const maxPartLength = 500;
+            const firstPartLength = 480;
+
+            let parts = [];
+            let remainingText = inputText;
+
+            // Extract the first part
+            const firstPart = remainingText.slice(0, firstPartLength);
+            parts.push(firstPart);
+            remainingText = remainingText.slice(firstPartLength);
+
+            // Break the remaining text into parts of 500 characters
+            while (remainingText.length > 0) {
+                // Find the next sentence
+                const nextSentenceEnd = remainingText.indexOf('.') + 1;
+
+                // If the sentence exceeds the character limit, shift to the next part
+                if (nextSentenceEnd > 0 && parts[parts.length - 1].length + nextSentenceEnd <= maxPartLength) {
+                    parts[parts.length - 1] += remainingText.slice(0, nextSentenceEnd);
+                    remainingText = remainingText.slice(nextSentenceEnd);
+                } else {
+                    // Find the last space before the character limit
+                    const lastSpace = parts[parts.length - 1].lastIndexOf(' ');
+
+                    // If there's a space, shift to the next part
+                    if (lastSpace !== -1) {
+                        parts.push(parts[parts.length - 1].slice(lastSpace + 1));
+                        parts[parts.length - 2] = parts[parts.length - 2].slice(0, lastSpace);
+                    } else {
+                        // No space found, break at the next 500 characters
+                        parts.push(remainingText.slice(0, maxPartLength));
+                        remainingText = remainingText.slice(maxPartLength);
+                    }
+                }
+            }
+
+            displayOutput(parts);
+        }
+
+        function displayOutput(parts) {
+            const outputDiv = document.getElementById('output');
+            outputDiv.innerHTML = '<h3>Result:</h3>';
+
+            parts.forEach((part, index) => {
+                const partDiv = document.createElement('div');
+                partDiv.textContent = `Part ${index + 1}: ${part}`;
+                outputDiv.appendChild(partDiv);
+            });
+        }
+
+        function downloadHTML() {
+            const htmlContent = `<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Text Breaker</title>
+    <style>
+        textarea {
+            width: 100%;
+            height: 150px;
+        }
+
+        #output {
+            margin-top: 10px;
+        }
+    </style>
+</head>
+<body>
+
+    <h2>Text Breaker</h2>
+    <label for="inputText">Enter your long text:</label>
+    <textarea id="inputText"></textarea>
+
+    <button onclick="breakText()">Break Text</button>
+
+    <div id="output"></div>
+
+    <button onclick="downloadHTML()">Download HTML</button>
+
+    <script>
+        ${breakText}
+        ${displayOutput}
+        ${downloadHTML}
+    </script>
+
+</body>
+</html>`;
+
+            const blob = new Blob([htmlContent], { type: 'text/html' });
+            const link = document.createElement('a');
+            link.href = URL.createObjectURL(blob);
+            link.download = 'text_breaker.html';
+            link.click();
+        }
+    </script>
+
+</body>
+</html>`;
+            const blob = new Blob([htmlContent], { type: 'text/html' });
+            const link = document.createElement('a');
+            link.href = URL.createObjectURL(blob);
+            link.download = 'text_breaker.html';
+            link.click();
         }
     </script>
 
